phones added dynamically

--- a/index.html
+++ b/index.html
@@ -4,6 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phone Hunter</title>
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/276201f3ac.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Tailwind and DaisyUI -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body>
+    <header class="">
+      <h1 class="font-bold my-2">Search your phone here</h1>
+      <div class="join">
+  <div>
+    <div>
+      <input id="search-field" class="input input-bordered join-item" placeholder="Search..."/>
+    </div>
+  </div>
+  
+    <button onclick="handleSearch()" id="btn-search" class="btn btn-accent  join-item">Search</button>
+  </div>
+</div>
+    </header>
+    <main class="mx-auto bg-gray-400">
+      <p class="my-4 font-bold text-center text-4xl mx-auto">All Phones here</p>
+      <div
+        id="phone-container"
+        class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
+      ></div>
+    </main>
+    <footer></footer>
+    <script src="./code.js"></script>
+  </body>
 </html>
