--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
   <form method="dialog" class="modal-box ">
-    <div id="show-details-container" class="card lg:card-side bg-base-100 ">
+    <div id="show-details-container" class="card  bg-base-100 ">
   
 </div>
     <div class="modal-action">
